[package]
name = "xdp-hello-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-hello-common = { path = "../xdp-hello-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-hello"
path = "src/main.rs"
