[package]
name = "xdp-log-ebpf"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
xdp-log-common = { path = "../xdp-log-common" }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[[bin]]
name = "xdp-log"
path = "src/main.rs"
